Switch from using Strings for name elements in paths and directory entries to using Name objects.
These allow for different case sensitivity settings by using a canonical form for equality while
retaining the original string for display.